# webserver

./: Common.cmake  README.md  addpath.bat  path.bat
lib/LibOVR/Src/: CMakeLists.txt  OVR_JSON.cpp
lib/LibOVR/Src/CAPI/: CAPI_HSWDisplay.cpp
lib/LibOVR/Src/Displays/: OVR_Display.h  OVR_Win32_Display.cpp  OVR_Win32_RenderShim.cpp
lib/LibOVR/Src/Kernel/: OVR_ThreadsWinAPI.cpp  OVR_Types.h
lib/LibOVR/Src/Util/: Util_ImageWindow.cpp
lib/i686-w64-mingw32/include/c++/i686-w64-mingw32/64/bits/: c++config.h
lib/i686-w64-mingw32/include/c++/i686-w64-mingw32/bits/: c++config.h
lib/zxing/cpp_build/: CMakeCache.txt  Makefile  cmake_install.cmake
source/: Adapter.hpp  AdapterForImageProduce.hpp  AdapterForImageProduce_test.cpp  CMakeLists.txt  DecoderQR.cpp  DecoderQR.hpp  DirectCamera.cpp  DirectCamera.hpp  DirectCameraCPP.cpp  DirectCameraCPP.hpp  GreyscaleLuminanceSource.cpp  GreyscaleLuminanceSource.h  ImageDecoder.h  ImageDecoder.hpp  ImageDecoderQR.cpp  ImageDecoderQR.h  ImageDecoderQR.hpp  ImageDecoderQR_test.cpp  ImageProduce.c  ImageProduce.h  ImageProduceCamera.c  ImageProduceCamera.h  ImageProduceCamera_test.c  ImageProduce_test.c  MyMovie.wmv  New Text Document.txt  OculusBase.hpp  OculusDK2.cpp  OculusDK2.hpp  OzoConfigure.hpp.in  Server.hpp  Server_pp.cpp  Server_pp.hpp  SourceBase.hpp  SourceCamera.cpp  SourceCamera.hpp  Thumbs.db  link.txt  qrcode.avi  try.cpp  (+2 more)
test/: CMakeLists.txt  DecoderQR_test.cpp  OculusDK2_test.cpp  Server_pp_test.cpp  TestConfigure.hpp.in  path.bat
test/AdapterDirect/source/: AdapterDirect_test.cpp  CMakeLists.txt
test/DecoderQR/source/: CMakeLists.txt  DecoderQR_test.cpp
test/DirectCamera/source/: CMakeLists.txt  DirectCamera_test.cpp
test/ImageDecoderQR/source/: CMakeLists.txt  ImageDecoderQR_test.cpp  Thumbs.db
test/ImageProduceCamera/source/: CMakeLists.txt  ImageProduceCamera_test.c
test/OculusDK2/source/: CMakeLists.txt  OculusDK2_test.cpp
test/Server_pp/source/: CMakeLists.txt  Server_pp_test.cpp
test/resource/: Thumbs.db
web/: Thumbs.db  index (2).html  index.html  index3.html
web/js/: OculusBridge.js  OculusRiftEffect.js  OculusRiftEffect_2.js  bigSphere_2.js  bigSphere_3.js  bigSphere_4.js  bigSphere_5.js  bigSphere_6.js  bigSphere_7.js  test.js
web/js/postprocessing/: OzoCustomMeshPass.js
web/js/src/: ImageSource.js  InitValues.js  MeshInitValues.js  OrthoCamera.js  Pana.js  PerspCamera.js  PictureSource.js  PlaneGeometry.js  Quaternion.js  Renderer.js  Scene1.js  ShaderMaterial.js  Websocket.js
web/server/: addpath.bat  package.json
web/server/public/: index.html
web/server/public/images/: Thumbs.db
web/server/public/javascripts/: test.js  three.js
web/server/public/javascripts/src/: ImageSource.js  InitValues.js  PerspCamera.js  PlaneGeometry.js  Quaternion.js  Renderer.js  ShaderMaterial.js  Websocket.js
web/server/routes/: index.js
web/sql/: install.sql  uninstall.sql
